public/css/common.css
/* ... */
.fileformat span {
padding: 10px 15px 10px 40px;
margin: 5px 0 0 0;
width: 70px;
height:15px;
float: left;
background-size: 25px!important;
}

.fileformat.popup-box {
        margin: 0 10px;
}

.fileformat.popup-box span {
  line-height: 15px;
}

.fileformat.popup-box h3 {
      padding: 0 30px;
        background-color: #efefef;
}

.format-box:nth-child(3) h3, 
.format-box:nth-child(4) h3 {
  padding: 0 15px;
}

.wrapper-dropdown-5 .dropdown li a,
.dropdown input
 {
  display: block;
  text-decoration: none;
  background: #fff!important;
  color: #666;
  text-align: left;
  padding: 6px 0px 6px 5px;
  transition: all 0.3s ease-out;
  border-bottom: 1px solid #e6e8ea;
  font-weight: normal;
  font-size: 16px;
}

.wrapper-dropdown-5 .dropdown li a:hover {
    background: #f7f8f9;
}

.wrapper-dropdown-5 .dropdown li:last-of-type a {
    border: none;
}

.wrapper-dropdown-5 .dropdown li i {
    margin-right: 5px;
    color: inherit;
    vertical-align: middle;
}

/* Hover state */

.wrapper-dropdown-5 .dropdown li:hover a,
.wrapper-dropdown-5 .dropdown li:hover input
 {
    color: black;
}

/* Active state */

.wrapper-dropdown-5.active,
.wrapper-dropdown-5.activeMenu
{
    box-shadow: none;
    color: black;
}

.wrapper-dropdown-5.active:after,
.wrapper-dropdown-5.activeMenu:after

{
    border-color: black transparent;
}

.wrapper-dropdown-5.active .dropdown,
.wrapper-dropdown-5.activeMenu .dropdown
{
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    border-top: 1px solid rgba(0, 0, 0, 0.2);
    max-height: 400px;
}




body.filterOpen .searchbox
{
	display: block;
    z-index: 0;
	}

	.searchbox label, .mgmt-panel label
	{
		display: inline;
		width: auto !important;
/*		margin-right: 5px;*/
		text-transform: uppercase;
}

.mgmt-panel label {
    text-transform: none;
    padding-bottom: 5px;
    font-weight: bold;
}

.insert-tm label {
    width: 162px!important;
    text-align: right;
    font-size: 16px;
    display: inline-block;
    margin-bottom: 20px;
    margin-right: 10px;
}

.insert-tm input {
    border: 1px solid #999;
    background: #fff;
    height: auto;
    outline: 0;
    box-shadow: inset 0 1px 2px #ddd;
    -webkit-box-shadow: inset 0 1px 2px #ddd;
    white-space: initial;
    overflow: initial;
    text-overflow: initial;
    width: 312px;
    height: 25px;
    padding: 2px 5px;
    border-radius: 2px;
}

.insert-tm input[type="checkbox"] {
    width: 20px;
    height: 20px;
}

.insert-tm {
    border: 1px solid #ccc;
    margin: 0 auto;
    overflow: hidden;
    padding: 10px 20px;
}

.insert-tm h4 {
    font-size: 18px;
    margin: 15px 0 25px;
}


.contact-box {
border: 1px dashed #ccc;
height: 90px;
border-radius: 4px;
margin-top: 20px;
padding: 2%;
}

.step1 {
margin-right: 14%;
}

.step2,.step1 {
clear: both;
margin: 0 auto;
overflow: hidden;
width: 500px;
}

.step3 {
margin: 0 auto;
overflow: hidden;
width: 42%;
border: 1px solid #ccc;
background: #FAFAFA;
border-radius: 4px;
margin-top: -4%;
margin-left: 3%;
padding: 1% 2% 0;
}

td.action .btn {
  cursor: pointer;
  height: 22px;
  color: #333!important;
  width: 75px!important;
  background: #dcdedf!important;
  border-radius: 2px 0 0 2px;
  -moz-box-shadow: 0 1px 2px #ccc;
  -webkit-box-shadow: 0 1px 2px #ccc;
  box-shadow: 0 1px 2px #ccc;
}


table .btn{width:auto !important;padding:5px 20px 0 20px !important; text-align:center;background:#fff;float:left}

td.action .btn .text {margin:0!important;}
a.memory-mgmt.pull-right {
    margin-top: 35px;
 /*   background: url(../img/sprite.png) 0 -259px no-repeat;
    background-size: 12px;
   */ padding: 0 0 5px 18px;
    margin-bottom: 5px;
}


/* Tabs */

.nav-tabs {
border-bottom: 1px solid #ddd;
float: left;
clear: both;
width:100%;
}

.nav-tabs>li {
float: left;
position: relative;
width: auto !important;
background: #efefef url(../img/point.gif) 0 0 repeat-x;
z-index: 9999999999999;
}
.nav>li {
position: relative;
display: block;
}

.nav>li>a {
position: relative;
text-decoration:none;
padding: 10px 15px;
}

.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
/* color: #555; */
/* cursor: default; */
/* background-color: #fff; */
/* font-weight: bold; */
/* margin-top: -5px; */
/* border: 1px solid #ddd; */
/* border-bottom-color: transparent; */
background: #fff;
color: #666;
text-shadow: none;
-moz-box-shadow: none;
-webkit-box-shadow: none;
margin: 0px 0 -1px 0;
outline: none;
padding-top: 5px !important;

}
.nav-tabs>li>a {
-webkit-transition: all 100ms ease-in;
-moz-transition: all 100ms ease-in;
padding: 4px 20px;
display: block;
color: #939598;
font-size: 18px;
float: left;
font-weight: bold;
text-decoration: none;
border-right: 1px solid #666;
border-top: 1px solid #666;
-webkit-box-shadow: inset 0 -1px 4px #ccc;
}

.text-center {
	text-align:center!important;}

.mgmt-input {
width: 90%;
padding: 2px 5px;
font-size: 15px !important;
margin-top: 0px;
margin-bottom: 15px;
-moz-border-radius: 2px;
border-radius: 2px;
border: 1px solid #999;
}

.description .mgmt-input {
width: 350px;
}


.searchbox input[type=button],
.searchbox input[type=submit]
{
	text-transform: uppercase;
}
.searchbox .block {
	float: left;
margin-right: 20px;
text-align: left;
}
.mgmt-panel .block
{
	margin: 5px 0 10px 0;
text-align: right;
clear: both;
}
.addrow-gl {
padding: 0 25px;
}
input#new-tm-key {
    width: 85%;
	margin:0 0 10px 0;
    height: 0px;
}

#activetm input#new-tm-key {
	width: 182px;
	padding: 12px 5px;
	margin: 0 0 10px 0;
	height: 0px;
	box-shadow: inset 0 1px 2px #ddd;
-webkit-box-shadow: inset 0 1px 2px #ddd;
}

.badkey input#new-tm-key {
    outline: 2px solid red!important;
}
input#new-tm-description {
    height:40px;
}
tr.new.badgrants .fileupload
{
    border: 3px solid red;
}
#inactivetm .dataTables_empty {
    display: none;
}
#activetm .startUploading, 
#inactivetm .startUploading
{
    background: url(../img/loading.gif) 77.5% 16px no-repeat !important;
background-size: 2% !important;
}
/* ... */

